# cache-spi-impl/map-cache/map-cache-core/src/main/java/com/bhf/aeroncache/codecs/response/ReusableStringCacheResponseDecoder.java
@@ -21,6 +21,7 @@ public class ReusableStringCacheResponseDecoder implements CacheResponseDecoder<
     private final CacheClearedDecoder cacheClearedDecoder = new CacheClearedDecoder();
     private final CacheDeletedDecoder cacheDeletedDecoder = new CacheDeletedDecoder();
     private final AllCacheStatsResultDecoder allCacheStatsResultDecoder = new AllCacheStatsResultDecoder();
+    private final AllTimersResultDecoder allTimersResultDecoder = new AllTimersResultDecoder();
     private final CacheSubscriptionResponseDecoder cacheSubscriptionResponseDecoder = new CacheSubscriptionResponseDecoder();
     private final CacheUnsubscribeResponseDecoder cacheUnsubscribeResponseDecoder = new CacheUnsubscribeResponseDecoder();
     private final CacheEntryUpdateDecoder cacheEntryUpdateDecoder = new CacheEntryUpdateDecoder();
@@ -235,6 +236,41 @@ public class ReusableStringCacheResponseDecoder implements CacheResponseDecoder<
 
         var requestId = allCacheStatsResultDecoder.requestId();
         cacheStatsResult.setRequestId(requestId);
+    }
+
+    @Override
+    public void decodeAllTimersResult(DirectBuffer buffer, int offset, AllTimersResult<ReusableString, ReusableString> allTimersResult) {
+        allTimersResultDecoder.wrapAndApplyHeader(buffer, offset, headerDecoder);
+        var status = getOperationStatus(allTimersResultDecoder.status());
+        allTimersResult.clear();
+        allTimersResult.setOperationStatus(status);
+        allTimersResult.setEndOfBatch(allTimersResultDecoder.endOfBatch() == BooleanType.T);
+
+        for (AllTimersResultDecoder.TimersDecoder item : allTimersResultDecoder.timers()) {
+            var timerType = getTimerType(item.timerType());
+            var deadline = item.deadline();
+            var cacheIdStr = item.cacheId();
+            var keyStr = item.key();
+
+            var cacheId = new ReusableString();
+            cacheId.copyFrom(cacheIdStr);
+            var key = new ReusableString();
+            key.copyFrom(keyStr);
+
+            var timerDetails = new TimerDetails<>(cacheId, key);
+            timerDetails.timerType = timerType;
+            timerDetails.deadline = deadline;
+            allTimersResult.getTimers().add(timerDetails);
+        }
+
+        var requestId = allTimersResultDecoder.requestId();
+        allTimersResult.setRequestId(requestId);
+    }
+
+    private static com.bhf.aeroncache.models.results.TimerType getTimerType(com.bhf.aeroncache.messages.TimerType timerType) {
+        return timerType == com.bhf.aeroncache.messages.TimerType.COUNTER
+                ? com.bhf.aeroncache.models.results.TimerType.COUNTER
+                : com.bhf.aeroncache.models.results.TimerType.CACHE;
     }
 
     @Override
