# cache-spi/src/main/java/com/bhf/aeroncache/models/PendingRemove.java
@@ -1,18 +1,15 @@
 package com.bhf.aeroncache.models;
 
 import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import lombok.ToString;
 
 @Getter
 @ToString
+@RequiredArgsConstructor
 public class PendingRemove<I extends Reusable, K extends Reusable> {
     final long timerCorrelationId;
     final I cacheToRemoveOn;
     final K keyToRemove;
-
-    public PendingRemove(long timerCorrelationId, I cacheToRemoveOn, K keyToRemove) {
-        this.timerCorrelationId = timerCorrelationId;
-        this.cacheToRemoveOn = cacheToRemoveOn;
-        this.keyToRemove = keyToRemove;
-    }
+    final long deadline;
 }
